test/corpus/section
================================================================================
section
================================================================================

# boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)))

================================================================================
section and item
================================================================================

# boop
- boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content))))

================================================================================
section and items
================================================================================

# boop
- boop
- boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content))
    (item
      (marker_task_pending)
      (content))))

================================================================================
item then section
================================================================================

- boop
# boop

--------------------------------------------------------------------------------

(document
  (item
    (marker_task_pending)
    (content))
  (section
    (section_header)))

================================================================================
section, subsection
================================================================================

# boop
## boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (section
      (section_header))))

================================================================================
section, subsections
================================================================================

# boop
## boop
## boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (section
      (section_header))
    (section
      (section_header))))

================================================================================
section, item, subsection
================================================================================

# boop
- boop
## boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content))
    (section
      (section_header))))

================================================================================
section and subsection with item
================================================================================

# boop
- boop
## beep
- boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content))
    (section
      (section_header)
      (item
        (marker_task_pending)
        (content)))))

================================================================================
section with body
================================================================================

# boop
beep

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (body)))

================================================================================
section after item spaced
================================================================================

- boop

# boop

--------------------------------------------------------------------------------

(document
  (item
    (marker_task_pending)
    (content))
  (section
    (section_header)))

================================================================================
sections with items spaced
================================================================================

# boop
- boop

# boop
- boop

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content)))
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content))))

================================================================================
item child, section, item child
================================================================================

- A
  - A1

# F
- B
  - B1

--------------------------------------------------------------------------------

(document
  (item
    (marker_task_pending)
    (content)
    (item
      (marker_task_pending)
      (content)))
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content)
      (item
        (marker_task_pending)
        (content)))))


================================================================================
section siblings and items
================================================================================

# s
# s
# s
## s
- a
- a
- b
## t

--------------------------------------------------------------------------------

(document
  (section
    (section_header))
  (section
    (section_header))
  (section
    (section_header)
    (section
      (section_header)
      (item
        (marker_task_pending)
        (content))
      (item
        (marker_task_pending)
        (content))
      (item
        (marker_task_pending)
        (content)))
    (section
      (section_header))))
